# rapidstats

./: .gitignore  .pre-commit-config.yaml  404.html  Cargo.toml  GEMINI.md  LICENSE  README.md  bootstrap.html  correlation.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  release.py  requirements_dev.txt  requirements_docs.txt  requirements_test.txt  sitemap.xml  tox.ini  update_docs.py  versions.json
.github/workflows/: CI.yaml  tests.yaml
0.0.12/: 404.html  bootstrap.html  correlation.html  index.html  metrics.html  objects.inv  sitemap.xml
0.0.12/search/: search_index.json
0.0.13/: 404.html  bootstrap.html  correlation.html  index.html  metrics.html  objects.inv  sitemap.xml
0.0.14/: 404.html  bootstrap.html  correlation.html  index.html  metrics.html  sitemap.xml
0.0.14/search/: search_index.json
0.0.15/: 404.html  bootstrap.html  correlation.html  index.html  metrics.html  objects.inv  sitemap.xml
0.0.15/search/: search_index.json
0.0.16/: 404.html  bootstrap.html  correlation.html  index.html  metrics.html  sitemap.xml
0.0.16/search/: search_index.json
0.0.17/: 404.html  bootstrap.html  correlation.html  distributions.html  index.html  metrics.html  objects.inv  sitemap.xml
0.0.17/search/: search_index.json
0.0.18/: 404.html  bootstrap.html  correlation.html  distributions.html  index.html  metrics.html  sitemap.xml
0.0.18/search/: search_index.json
0.0.19/: 404.html  bootstrap.html  correlation.html  distributions.html  index.html  metrics.html  sitemap.xml
0.0.19/search/: search_index.json
0.0.20/: 404.html  bootstrap.html  correlation.html  distributions.html  index.html  metrics.html  sitemap.xml
0.0.20/search/: search_index.json
0.0.21/: 404.html  bootstrap.html  correlation.html  distributions.html  index.html  metrics.html  objects.inv  sitemap.xml
0.0.21/search/: search_index.json
0.0.22/: 404.html  bootstrap.html  correlation.html  distributions.html  index.html  metrics.html  objects.inv  sitemap.xml
0.0.22/search/: search_index.json
0.0.23/: 404.html  bootstrap.html  correlation.html  distributions.html  index.html  metrics.html  objects.inv  sitemap.xml
0.0.23/search/: search_index.json
0.0.24/: 404.html  bootstrap.html  correlation.html  distributions.html  index.html  metrics.html  objects.inv  sitemap.xml
0.0.24/search/: search_index.json
0.1.0/: 404.html  bootstrap.html  correlation.html  distributions.html  index.html  metrics.html  misc.html  objects.inv  polars.html  preprocessing.html  sitemap.xml
0.1.0/search/: search_index.json
0.3.0/: 404.html  bin.html  bootstrap.html  correlation.html  distributions.html  drift.html  index.html  metrics.html  misc.html  objects.inv  polars.html  preprocessing.html  sitemap.xml
0.3.0/search/: search_index.json
0.3.1/: 404.html  bin.html  bootstrap.html  correlation.html  distributions.html  drift.html  index.html  metrics.html  misc.html  polars.html  preprocessing.html  sitemap.xml
0.3.1/search/: search_index.json
benchmarks/: analyze_benchmarks.ipynb  bench_bootstrap.py  bench_corr.py  bench_metrics.py  benchmark.py  generate_data.py
docs/: bin.md  bootstrap.md  correlation.md  distributions.md  drift.md  index.md  metrics.md  misc.md  polars.md  preprocessing.md  requirements_docs.txt
python/faststats/: __init__.py  _bootstrap.py  _metrics.py  _rustystats.pyi  _utils.py
python/rapidstats/: __init__.py  _bootstrap.py  _corr.py  _distributions.py  _general.py  _metrics.py  _rustystats.pyi  _utils.py  bin.py  drift.py  metrics.py  polars.py  preprocessing.py  selection.py
python/rapidstats/_polars/: _format.py  _numeric.py  _utils.py
search/: search_index.json
src/: bootstrap.rs  distributions.rs  general.rs  lib.rs  main.rs  metrics.rs  string.rs  utils.rs
tests/: paths.py  test_bin.py  test_bootstrap.py  test_corr.py  test_distributions.py  test_faststats.py  test_general.py  test_metrics.py  test_polars.py  test_preprocessing.py  test_rapidstats.py  test_selection.py
tests/bootstrap/: test_poisson_multinomial_close.py
tests/data/: generate_data.ipynb  iris_scores.parquet  scores.parquet
tests/drift/: test_psi.py
