[package]
name = "rapidstats"
version = "0.3.0"
edition = "2021"

[lib]
name = "rapidstats"
crate-type = [ "cdylib",]

[dependencies]
ndarray = "0.15.6"
paste = "1.0.15"
polars-arrow = "0.49"
pyo3 = "0.25.0"
rayon = "1.10.0"
rand = "0.8"
rand_distr = "0.4"

[dependencies.hashbrown]
version = "0.15"
features = [ "nightly",]

[dependencies.pyo3-polars]
version = "0.22"
features = [ "derive",]

[dependencies.polars]
version = "0.49"
features = [ "performant", "random", "lazy", "cum_agg", "unique_counts", "nightly", "repeat_by",]
