[project]
name = "rapidstats"
version = "0.0.20"
description = "A library that implements fast statistical routines"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Cangyuan Li", email = "everest229@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = ["polars>=1.0.0", "tqdm"]

[project.optional-dependencies]
pyarrow = ["pyarrow >= 7.0.0"]

[project.urls]
"Homepage" = "https://github.com/CangyuanLi/rapidstats"
"Source" = "https://github.com/CangyuanLi/rapidstats"
"Bug Reports" = "https://github.com/CangyuanLi/rapidstats/issues"

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "rapidstats._rustystats"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.isort]
profile = "black"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]
