[project]
name = "rapidstats"
version = "0.2.0"
description = "A library that implements fast statistical routines"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Cangyuan Li", email = "everest229@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = ["polars>=1.0.0,!=1.26.0,!=1.32.3", "narwhals>=1.0.0", "tqdm"]

[project.optional-dependencies]
pyarrow = ["pyarrow >= 7.0.0"]

[dependency-groups]
typing = ["typing_extensions"]
docs = [
    "mkdocs==1.6.1",
    "mkdocs-autorefs==1.4.3",
    "mkdocs-get-deps==0.2.0",
    "mkdocs-material==9.6.18",
    "mkdocs-material-extensions==1.3.1",
    "mkdocs-section-index==0.3.8",
    "mkdocstrings==0.30.0",
    "mkdocstrings-python==1.18.2",
    "mike==2.1.3",
]
tests = ["pytest", "polars", "pandas", "pyarrow", "numpy", "tox>=4.29.0"]
dev = [
    "ruff",
    "mypy",
    "ipykernel",
    "maturin==1.8.6",
    "cli-pybench>=0.1.1",
    "toml>=0.10.2",
    "types-toml>=0.10.8.20240310",
    "pre-commit>=4.3.0",
    { include-group = "docs" },
    { include-group = "typing" },
    { include-group = "tests" },
]

[project.urls]
"Homepage" = "https://github.com/CangyuanLi/rapidstats"
"Source" = "https://github.com/CangyuanLi/rapidstats"
"Bug Reports" = "https://github.com/CangyuanLi/rapidstats/issues"

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "rapidstats._rustystats"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pybench]
repeat = 50
number = 1
warmups = 1
garbage_collection = true

[tool.isort]
profile = "black"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]
